--- a/docs/main.css
+++ b/docs/main.css
@@ -1,3 +1,3 @@
-.E4_Re4wnxfZ5zeGjCJC7 svg{height:30px;position:relative;top:-24px;left:-3px;width:auto}
-.tQmzDNIyNpQRzYZsUg1w{font-size:1.25rem;padding:1rem}.xcx3nqnd9MsblXhSXLdP{align-items:center;display:flex;margin:1rem 0}.xcx3nqnd9MsblXhSXLdP b{font-family:"monospace"}.xcx3nqnd9MsblXhSXLdP input{font-size:inherit;padding:3px;width:25em}.xcx3nqnd9MsblXhSXLdP input+button{font-size:inherit;padding:3px}
+.E4_Re4wnxfZ5zeGjCJC7 svg{position:relative;width:auto}.Vx99VwvX1f3EaWkmC9mM svg{cursor:move;height:30px;left:-3px;top:-24px}.tEbBTAgT0mGyoJxY16Lw svg,.u3FOUCqTFDmBHPyP7jSF svg{left:-6px;top:-7px}
+.ec39NY6cvGuwg7d76T8W{font-size:1.25rem;padding:1rem}.iXE1OwK83qbJwtsvC5vv{align-items:center;display:flex;margin:1rem 0}.iXE1OwK83qbJwtsvC5vv b{font-family:"monospace"}.iXE1OwK83qbJwtsvC5vv input{font-size:inherit;padding:3px;width:25em}.iXE1OwK83qbJwtsvC5vv input+button{font-size:inherit;padding:3px}
 .leaflet-container{height:400px}
